# shanta-yantra

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  CONSTITUTION.md  EVALUATION.md  GEMINI_WRAPPER.md  INTERACTION_MODEL.md  RAG_REVIEW_PROMPTS.md  ROADMAP.md  THESIS.md  WHY_NOT_JUST_A_PROMPT.md  WRAPPER_MVP.md
examples/: README.md  reflect-authority.txt  reflect-basic.txt  reflect-inner-state.txt  reflect-tradeoff.json
src/shanta_yantra/: cli.py  engine.py  eval_summary.py  heuristics.py  models.py  session_store.py  wrapper_cli.py  wrapper_policy.py  wrapper_render.py  wrapper_state.py  wrapper_tools.py
tests/: test_cli.py  test_engine.py  test_eval_summary.py  test_evals.py  test_session_store.py  test_wrapper_cli.py  test_wrapper_policy.py
tests/fixtures/: engine_eval_cases.json  wrapper_eval_cases.json
