[project]
name = "shanta-yantra"
version = "0.1.1"
description = "Reduce noise. Return to practice."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
keywords = ["cli", "reflection", "attention", "heuristics", "safety"]

[project.urls]
Repository = "https://github.com/fayerman-source/shanta-yantra"
Issues = "https://github.com/fayerman-source/shanta-yantra/issues"
Changelog = "https://github.com/fayerman-source/shanta-yantra/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
shanta = "shanta_yantra.cli:main"
shanta-wrap = "shanta_yantra.wrapper_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
